crates/pcb-zen/tests/snapshots/enum_conversion__snapshot_enum_config_conversion.snap
---
source: crates/pcb-zen/tests/enum_conversion.rs
assertion_line: 38
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "TEST")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0402_1005Metric")
      (libsource (lib "lib") (part "TEST") (description "unknown"))
      (sheetpath (names "child.comp0") (tstamps "1210f117-19c9-578c-bf69-b70ae9bad0e5"))
      (tstamps "1210f117-19c9-578c-bf69-b70ae9bad0e5")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "TEST")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "V") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "child.VCC")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
