crates/pcb-zen/tests/snapshots/enum_conversion__snapshot_enum_io_conversion.snap
---
source: crates/pcb-zen/tests/enum_conversion.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "?")
      (footprint "TEST:0402")
      (libsource (lib "lib") (part "?") (description "unknown"))
      (sheetpath (names "child.comp0") (tstamps "1210f117-19c9-578c-bf69-b70ae9bad0e5"))
      (tstamps "1210f117-19c9-578c-bf69-b70ae9bad0e5")
      (property (name "Reference") (value "U1"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "V") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "child.VCC")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
Advice: [TEMP_DIR]top.zen:4:1-7:2 Issue in `child`
Advice: [TEMP_DIR]child.zen:5:11-35 io() parameter 'hdr_dir' should be UPPERCASE: 'HDR_DIR'
